# homebase

./: .gitignore  ARCHITECTURE_PLAN.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  ChatComponent.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  state.rs
src-tauri/src/commands/: auth.rs  chat.rs  copilot.rs  logs.rs  mod.rs  ollama.rs  router.rs  traces.rs
src/components/: Layout.tsx
src/i18n/: index.ts  translations.ts
src/lib/: caveman.ts
src/pages/: ChatPage.tsx  LogsPage.tsx  ModelsPage.tsx  SettingsPage.tsx  StatusPage.tsx  TracesPage.tsx
src/store/: chatStore.ts  localeStore.ts  settingsStore.ts  traceStore.ts
